- Summary: Fix performance warnings
-Bug (s) Resolved:
Bugzilla 284816

- Description:
Fix performance warnings

- Tests Description:
Auto Test

- Files Edited:

- Files Added:

- Files Deleted:

- Notes to Build Team:

- Notes to Developers:

- Notes to QA:

- Notes to Documentation: